ori/theme/ori_app/src/stories/index.sass
@import '../styles/conf/_sizes.sass'
@import '../styles/conf/_breakpoints.sass'

.simpleWrapper
	max-width: 800px
	min-height: $s144 * 2.5
	padding: $s77 1.25rem $s233 1.5rem
	margin: 0 auto
	
.paddingTop
	&_144
		padding-top: $s144

	&_233
		padding-top: $s233

	&_big
		padding-top: 15em


.ladderFold__title.ladderFold__title
	top: .6em

.aboutItemImage
	max-width: 25%
	flex: 1

	@include breakpoint($xs)
		min-width: 100%
		margin-bottom: .75rem

